--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^20.0.0",
     "@awesome-cordova-plugins/file": "^8.0.2",
     "@awesome-cordova-plugins/file-transfer": "^8.0.2",
+    "@capacitor-mlkit/barcode-scanning": "^7.3.0",
     "@capacitor/android": "7.4.2",
     "@capacitor/app": "^7.0.1",
     "@capacitor/browser": "^7.0.1",
@@ -30,7 +31,7 @@
     "@capacitor/core": "^7.4.2",
     "@capacitor/filesystem": "^7.1.2",
     "@capacitor/haptics": "7.0.1",
-    "@capacitor/ios": "7.4.2",
+    "@capacitor/ios": "^7.4.2",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/local-notifications": "^7.0.2",
     "@capacitor/push-notifications": "^7.0.2",
