--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^20.0.0",
     "@awesome-cordova-plugins/file": "^8.0.2",
     "@awesome-cordova-plugins/file-transfer": "^8.0.2",
+    "@capacitor-firebase/messaging": "^7.3.1",
     "@capacitor-mlkit/barcode-scanning": "^7.3.0",
     "@capacitor/android": "7.4.2",
     "@capacitor/app": "^7.0.1",
@@ -39,6 +40,7 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/storage": "^4.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "firebase": "^11.10.0",
     "ionicons": "^7.0.0",
     "ng2-pdf-viewer": "^10.4.0",
     "rxjs": "~7.8.0",
