--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@capacitor/browser": "^7.0.1",
     "@capacitor/camera": "^7.0.1",
     "@capacitor/core": "^7.4.2",
-    "@capacitor/filesystem": "^7.1.2",
+    "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/ios": "^7.4.2",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/local-notifications": "^7.0.2",
     "@capacitor/push-notifications": "^7.0.2",
+    "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage": "^4.0.0",
